Main pages created and filled in

--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,14 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "STAR lab"
+title                    : "STAR Lab"
 title_separator          : "-"
-name                     : &name "STAR lab"
+name                     : &name "STAR Lab"
 description              : &description "The Space Telecommunications, Astronomy and Radiation Laboratory, led by Prof. Kerri Cahoy, is part of the Space Systems Laboratory in the Department of Aeronautics and Astronautics at MIT"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 # repository               : "academicpages/academicpages.github.io"
 repository               : "MIT-STARlab/mit-starlab.github.io"
-logo                     : "logo_1.svg" # path of logo image to display in the masthead
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -26,7 +25,7 @@ author:
   avatar           : "logo_1.svg"
   name             : # "STAR lab MIT"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "We achieve new scientific results from sensors on distributed space-based platforms."
   location         : # "Earth"
   employer         : #"Red Brick University"
   uri              : # URL
@@ -45,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "MIT-STARLab"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -80,12 +79,13 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Journal '    
   conferences:
     title: 'Conference Papers'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+# logo                     : "assets/images/ajay.jpg" # path of logo image to display in the masthead
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
