--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,23 @@
 # prevent it from being included in the site.
 
 main:
+  - title: "Research"
+    url: /research/
+
+  - title: "People"
+    url: /people/
+
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Theses"
+    url: /theses/
 
-  - title: "Teaching"
-    url: /teaching/    
+  # - title: "Talks"
+  #   url: /talks/      
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Portfolio"
+  #   url: /portfolio/
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
