--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "STAR Lab"
 title_separator          : "-"
 name                     : &name "STAR Lab"
 description              : &description "The Space Telecommunications, Astronomy and Radiation Laboratory, led by Prof. Kerri Cahoy, is part of the Space Systems Laboratory in the Department of Aeronautics and Astronautics at MIT"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mit-starlab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 # repository               : "academicpages/academicpages.github.io"
 repository               : "MIT-STARlab/mit-starlab.github.io"
